--- a/src/tests/data/CMakeLists.txt
+++ b/src/tests/data/CMakeLists.txt
@@ -17,7 +17,8 @@ set(IDYNTREE_TESTS_URDFS icub.urdf
                          robotModelTestTwoLinks.urdf
                          iCubGenova02.urdf
                          iCubDarmstadt01.urdf
-                         twoLinksWithoutBaseSensors.urdf)
+                         twoLinksWithoutBaseSensors.urdf
+                         twoLinksRotationOnZAxis.urdf)
 
 
 # configure an header containing the path
