--- a/src/model_io/symoro/CMakeLists.txt
+++ b/src/model_io/symoro/CMakeLists.txt
@@ -29,6 +29,10 @@ target_include_directories(${libraryname} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURR
 
 target_link_libraries(${libraryname} idyntree-kdl expression-parser ${orocos_kdl_LIBRARIES})
 
+if(NOT CMAKE_VERSION VERSION_LESS 2.8.12)
+    target_compile_options(${libraryname} PRIVATE ${IDYNTREE_WARNING_FLAGS})
+endif()
+
 include_directories(SYSTEM ${orocos_kdl_INCLUDE_DIRS})
 
 set_property(TARGET ${libraryname} PROPERTY PUBLIC_HEADER ${IDYNTREE_MODELIO_SYMORO_HEADERS})
