--- a/src/model_io/iKin/CMakeLists.txt
+++ b/src/model_io/iKin/CMakeLists.txt
@@ -29,6 +29,10 @@ target_include_directories(${libraryname} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURR
 
 target_link_libraries(${libraryname} idyntree-core iKin ${orocos_kdl_LIBRARIES})
 
+if(NOT CMAKE_VERSION VERSION_LESS 2.8.12)
+    target_compile_options(${libraryname} PRIVATE ${IDYNTREE_WARNING_FLAGS})
+endif()
+
 set_property(TARGET ${libraryname} PROPERTY PUBLIC_HEADER ${IDYNTREE_MODELIO_IKIN_HEADERS})
 
 install(TARGETS ${libraryname}
