Implemented AverageVelocity and Total Momentum Jacobian

--- a/src/core/tests/CMakeLists.txt
+++ b/src/core/tests/CMakeLists.txt
@@ -23,3 +23,4 @@ add_unit_test(Wrench)
 add_unit_test(ExpLog)
 add_unit_test(VectorDynSize)
 add_unit_test(MatrixDynSize)
+add_unit_test(EigenHelpers)
