--- a/src/yarp/CMakeLists.txt
+++ b/src/yarp/CMakeLists.txt
@@ -39,6 +39,10 @@ include_directories(SYSTEM ${YARP_INCLUDE_DIRS})
 target_link_libraries(idyntree-yarp idyntree-core
                                     idyntree-model
                                     ${YARP_LIBRARIES})
+                                    
+if(NOT CMAKE_VERSION VERSION_LESS 2.8.12)
+    target_compile_options(idyntree-yarp PRIVATE ${IDYNTREE_WARNING_FLAGS})
+endif()
 
 install(TARGETS idyntree-yarp
         EXPORT iDynTree
