--- a/src/tests/yarp_kdl_consistency/CMakeLists.txt
+++ b/src/tests/yarp_kdl_consistency/CMakeLists.txt
@@ -6,7 +6,7 @@ macro(add_yarp_kdl_consistency_test testName)
     set(testname   ${testName}ConsistencyTest)
     add_executable(${testbinary} ${testsrc})
     target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR} ${IDYNTREE_TREE_INCLUDE_DIRS})
-    target_link_libraries(${testbinary}  idyntree-modelio-urdf-kdl idyntree-yarp-kdl idyntree-icub idyntree-core idyntree-kdl idyntree-model ${YARP_LIBRARIES} ${orocos_kdl_LIBRARIES})
+    target_link_libraries(${testbinary}  idyntree-modelio-urdf-kdl idyntree-yarp-kdl idyntree-yarp idyntree-core idyntree-kdl idyntree-model ${YARP_LIBRARIES} ${orocos_kdl_LIBRARIES})
     add_test(NAME ${testname} COMMAND ${testbinary})
 
     if(IDYNTREE_RUN_VALGRIND_TESTS)
