--- a/src/tests/kdl_tests/CMakeLists.txt
+++ b/src/tests/kdl_tests/CMakeLists.txt
@@ -17,14 +17,16 @@ macro(add_all_components_test testName)
     endif()
 endmacro()
 
-add_all_components_test(inverse_inertia)
-add_all_components_test(regressor_utils)
-add_all_components_test(subtree_regressor)
-add_all_components_test(inversedynamics_regressor)
-add_all_components_test(inversedynamics_crba)
-add_all_components_test(comjacobian)
-add_all_components_test(inversedynamics_different_loops)
-add_all_components_test(DynamicsComputationsConsistency)
+if(IDYNTREE_USES_YARP)
+  add_all_components_test(inverse_inertia)
+  add_all_components_test(regressor_utils)
+  add_all_components_test(subtree_regressor)
+  add_all_components_test(inversedynamics_regressor)
+  add_all_components_test(inversedynamics_crba)
+  add_all_components_test(comjacobian)
+  add_all_components_test(inversedynamics_different_loops)
+  add_all_components_test(DynamicsComputationsConsistency)
+endif()
 
 if(IDYNTREE_USES_ICUB_MAIN)
   find_package(YARP)
@@ -36,6 +38,8 @@ if(IDYNTREE_USES_ICUB_MAIN)
   #add_test(NAME test_urdf2dh COMMAND urdf2dh_test urdf_icub_test.urdf)
 endif()
 
+FIND_PACKAGE(Boost)
+include_directories(${Boost_INCLUDE_DIR})
 add_executable(urdf_forward_kinematics urdf_forward_kinematics.cpp)
 target_link_libraries(urdf_forward_kinematics idyntree-core idyntree-kdl idyntree-modelio-urdf-kdl ${orocos_kdl_LIBRARIES})
 
