[visualization] Refactor floor grid to custom scene node

--- a/src/visualization/CMakeLists.txt
+++ b/src/visualization/CMakeLists.txt
@@ -15,6 +15,8 @@ if(IDYNTREE_USES_IRRLICHT)
     list(APPEND iDynTree_visualization_source src/Environment.cpp)
     list(APPEND iDynTree_visualization_private_headers src/Light.h)
     list(APPEND iDynTree_visualization_source src/Light.cpp)
+    list(APPEND iDynTree_visualization_private_headers src/FloorGridSceneNode.h)
+    list(APPEND iDynTree_visualization_source src/FloorGridSceneNode.cpp)
 endif()
 
 source_group("Source Files" FILES ${iDynTree_visualization_source})
