Conditional compilation of tests
Check on Eigen >= 3.3

--- a/src/core/tests/CMakeLists.txt
+++ b/src/core/tests/CMakeLists.txt
@@ -25,4 +25,6 @@ add_unit_test(VectorDynSize)
 add_unit_test(MatrixDynSize)
 add_unit_test(SparseMatrix) 
 add_unit_test(EigenHelpers)
-add_unit_test(EigenSparseHelpers)
+if (NOT ${EIGEN3_VERSION} VERSION_LESS 3.3)
+  add_unit_test(EigenSparseHelpers)
+endif()
