--- a/src/estimation/tests/CMakeLists.txt
+++ b/src/estimation/tests/CMakeLists.txt
@@ -13,7 +13,9 @@ macro(add_estimation_test classname)
     endif()
 endmacro()
 
-add_estimation_test(BerdyHelper)
+if (NOT ${EIGEN3_VERSION} VERSION_LESS 3.3)
+  add_estimation_test(BerdyHelper)
+endif()
 add_estimation_test(ExternalWrenchesEstimation)
 add_estimation_test(ExtWrenchesAndJointTorquesEstimator)
 add_estimation_test(SimpleLeggedOdometry)
