Added InverseKinematics library
IK Solution is obtained by solving
a NLP by using IPOPT solver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,9 @@ set(IDYNTREE_MODULE_DIR ${PROJECT_SOURCE_DIR}/cmake)
 set(IDYNTREE_MODULE_PATH ${IDYNTREE_MODULE_DIR})
 list(APPEND CMAKE_MODULE_PATH ${IDYNTREE_MODULE_PATH})
 
+find_package(YCM REQUIRED)
+include(YCMDefaultDirs)
+
 include(GNUInstallDirs)
 if (CMAKE_VERSION LESS 3.0)
     # workaround for http://public.kitware.com/pipermail/cmake-developers/2014-January/009435.html
