added primatic joint to CMAKE

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -22,6 +22,7 @@ set(IDYNTREE_MODEL_HEADERS include/iDynTree/Model/ContactWrench.h
                            include/iDynTree/Model/ModelTransformers.h
                            include/iDynTree/Model/MovableJointImpl.h
                            include/iDynTree/Model/RevoluteJoint.h
+                           include/iDynTree/Model/PrismaticJoint.h
                            include/iDynTree/Model/SolidShapes.h
                            include/iDynTree/Model/SubModel.h
                            include/iDynTree/Model/Traversal.h)
@@ -45,6 +46,7 @@ set(IDYNTREE_MODEL_SOURCES src/ContactWrench.cpp
                            src/ModelTransformers.cpp
                            src/ModelInterfaceDestructors.cpp
                            src/RevoluteJoint.cpp
+                           src/PrismaticJoint.cpp
                            src/SolidShapes.cpp
                            src/SubModel.cpp
                            src/Traversal.cpp)
